# freeipa

./: .gitignore  .test_runner_config.yaml  .travis.yml  .travis_run_task.sh  .wheelconstraints.in  ACI.txt  API.txt  Makefile.am  Makefile.python.am  configure.ac  freeipa.spec.in  ipasetup.py.in  makeaci.in  makeapi.in  pylint_plugins.py  pylintrc  pyproject.toml  tox.ini
client/: ipa-client-automount.in
contrib/: copy-schema-to-ca-RHEL6.py  lgtm_container.py  lite-server.py  lite-setup.py
daemons/ipa-otpd/: ipa-otpd@.service.in  test.py
doc/: conf.py  index.rst  ipasphinx.py
doc/commands/: aci.rst  automember.rst  automount.rst  ca.rst  caacl.rst  cert.rst  certmap.rst  certprofile.rst  config.rst  delegation.rst  dns.rst  domainlevel.rst  group.rst  hbacrule.rst  hbacsvc.rst  hbacsvcgroup.rst  hbactest.rst  host.rst  hostgroup.rst  idrange.rst  idviews.rst  index.rst  krbtpolicy.rst  location.rst  migration.rst  netgroup.rst  otpconfig.rst  otptoken.rst  passwd.rst  permission.rst  ping.rst  pkinit.rst  privilege.rst  pwpolicy.rst  radiusproxy.rst  realmdomains.rst  role.rst  schema.rst  (+14 more)
install/conf/: 10-ipa-modules.conf  Makefile.am  httpd.conf  ipa-kdc-proxy.conf  ipa.conf
ipaclient/: __main__.py  csrgen.py  csrgen_ffi.py  discovery.py  frontend.py  setup.py
ipalib/: __init__.py  aci.py  backend.py  base.py  capabilities.py  cli.py  config.py  constants.py  crud.py  dns.py  errors.py  frontend.py  krb_utils.py  messages.py  misc.py  output.py  parameters.py  pkcs10.py  plugable.py  request.py  rpc.py  setup.py  text.py  util.py  x509.py
ipaplatform/: __init__.py  _importhook.py  constants.py  osinfo.py  paths.py  services.py  setup.py  tasks.py
ipapython/: admintool.py  certdb.py  config.py  cookie.py  directives.py  directivesetter.py  dn.py  dn_ctypes.py  dnsutil.py  dogtag.py  errors.py  graph.py  ipa_log_manager.py  ipachangeconf.py  ipaldap.py  ipautil.py  ipavalidate.py  kerberos.py  kernel_keyring.py  session_storage.py  setup.py  ssh.py  version.py.in
ipaserver/: dcerpc.py  dcerpc_common.py  dns_data_management.py  masters.py  p11helper.py  rpcserver.py  servroles.py  setup.py  topology.py
ipasphinx/: ipaautodoc.py  ipabase.py
ipatests/: conftest.py  create_external_ca.py  data.py  i18n.py  ipa-test-task  setup.py  test_util.py  util.py
packaging/: Makefile.am
packaging/ipacommands/: Makefile.am
pypi/: test_placeholder.py
selinux/: ipa.fc  ipa.if  ipa.te
util/: ipa_pwd.c
(+604 files in other folders)
