NULL =

appdir = $(IPA_DATA_DIR)
app_DATA =                              \
	ipa.conf			\
	ipa-kdc-proxy.conf		\
	ipa-pki-proxy.conf		\
	ipa-rewrite.conf		\
	$(NULL)

EXTRA_DIST =                            \
        $(app_DATA)                     \
        $(NULL)

MAINTAINERCLEANFILES =                  \
        *~                              \
        Makefile.in
