NULL =

appdir = $(IPA_DATA_DIR)
app_DATA =                              \
	10-ipa-modules.conf			\
	httpd.conf			\
	ipa.conf			\
	ipa-kdc-proxy.conf.template	\
	ipa-pki-proxy.conf		\
	ipa-rewrite.conf		\
	$(NULL)

EXTRA_DIST =                            \
        $(app_DATA)                     \
        $(NULL)
